# android-player

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  H264MediaCodec.cpp  H264MediaCodec.h  native-lib.cpp
app/src/main/java/com/example/myplayer/: MainActivity.java  VideoPlayer.java
app/src/main/java/com/example/myplayer/audio/: AudioRecordActivity.java  IAudioRecord.java  MyAudioRecord.java  MyAudioTrack.java
app/src/main/java/com/example/myplayer/mediaCode/: AvcDecoder.java  AvcEncoder.java
app/src/main/java/com/example/myplayer/mediaCode/aac/: AacAudioPlayer.java  AacAudioRecord.java
app/src/main/res/layout/: activity_audio_record.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
